Created search method APEX and JS

--- a/force-app/main/default/lwc/myModal/myModal.html
+++ b/force-app/main/default/lwc/myModal/myModal.html
@@ -3,14 +3,14 @@
         <lightning-modal-header label="Note">
         </lightning-modal-header>
     <lightning-modal-body>
-        <div class="slds-var-p-around_medium lgc-bg">
+        <div class="slds-var-p-around_medium">
             <lightning-input
             type="text"
             label="Label"
             onchange={handleLabelChange}
             ></lightning-input>
         </div>
-        <div class="row slds-var-p-around_medium lgc-bg">
+        <div class="row slds-var-p-around_medium">
             <lightning-textarea 
             label="Description" 
             value={descriptionValue}
