new popap editStiker

--- a/force-app/main/default/lwc/deleteStiker/deleteStiker.html
+++ b/force-app/main/default/lwc/deleteStiker/deleteStiker.html
@@ -5,6 +5,7 @@
         <lightning-button
         label="Yes"
         variant="Brand" 
+        class="slds-m-right_small"
         onclick={handleYes}>
         </lightning-button>
 
