--- a/force-app/main/default/lwc/note/note.html
+++ b/force-app/main/default/lwc/note/note.html
@@ -1,23 +1,27 @@
 <template>
     <lightning-card title="Notes">
         <lightning-button label="Add" class="search-input" slot="actions" variant="Brand" onclick={handleAdd}></lightning-button>
-        <div class="slds-var-p-around_medium slds-grid ">
+        <div class="slds-m-around_medium slds-grid ">
             <div class="slds-col">
-                <lightning-input type="date" label="Search by date" value={searchDate} onchange={handleDateChange}></lightning-input>
-                    <div class="slds-col">
-                        <lightning-button label="Search" variant="brand" onclick={handleSearch}></lightning-button>
-                    </div>                    
+                <lightning-input type="date"  label="Search by date" value={searchDate} onchange={handleDateChange}></lightning-input>
+                    <p>{searchNull}</p>
+                    <div class="slds-col ">
+                        <lightning-button-group>
+                            <lightning-button class="" label="Search" variant="brand" onclick={handleSearch}></lightning-button>
+                            <lightning-button label="all" variant="brand-outline" onclick={handleAll}></lightning-button>
+                        </lightning-button-group>
+                    </div> 
             </div>         
         </div>
         <lightning-layout>
             <lightning-layout-item size="12" class="notes-container">
                 <!-- <c-edit-stiker use-date={noteUse}></c-edit-stiker>      -->
-                <template for:each={savedData} for:item="note">   
+                <template for:each={saveNotes} for:item="note">   
                         <div key={note.Id} class="note-sticker" onclick={handleStickerEdit} data-id={note.Id}> 
                             <!-- new -->
-                            <div class="slds-var-p-around_medium slds-grid slds-grid_vertical-align-center">
+                            <div class="slds-m-around_medium slds-grid slds-grid_vertical-align-center">
                                 <div class="slds-grow">
-                                    <div class="slds-var-p-around_medium">
+                                    <div class="slds-m-around_large">
                                         <p class="note-label">{note.Label__c}</p>
                                         <div class="slds-shrink">
                                             <!-- <lightning-button-icon icon-name="utility:delete" variant="base" alternative-text="Delete" class="slds-button_icon-small slds-float_right slds-m-top_xx-small" data-id={note.Id} onclick={handleDelete}></lightning-button-icon> -->
@@ -28,7 +32,7 @@
                                     </div>
                                 </div>    
                             </div>
-                            <div class="slds-var-p-around_medium slds-text-align_left">
+                            <div class="slds-m-around_medium slds-text-align_left">
                                 <b class="note-date">{note.Created_Date__c}</b>
                             </div>
                             
