new Test class and clean code

--- a/force-app/main/default/lwc/weatherAPIApp/weatherAPIApp.html
+++ b/force-app/main/default/lwc/weatherAPIApp/weatherAPIApp.html
@@ -25,7 +25,7 @@
                         <p>{result.location.name}</p>
                         <p>{result.location.country}</p>
                         <p>{result.location.region}</p>
-                        <p>{result.current.condition.text}</p>
+                        <p class="wrapper-name_condition">{result.current.condition.text}</p>
                     </div>
                     
                     
